# sdlgames

./: .gitignore  Makefile.am  README.md  aclocal.m4  cntrl.c  configure.ac  deal.c  engine.c  engine.h  game_state.c  game_state.h  infobox.c  leaderboard.c  settings.c  spidersol.c  ui.c  ui.h  undo.c  win.c  win.h
.github/workflows/: package.yml
asset/: icon.h  micross.h
build-aux/: ax_cxx_compile_stdcxx.m4  install-sh
sdlmine/: .gitignore  Makefile  Makefile.am  README.md  assets.c  configure.ac  game_render.c  game_render.h  gen_assets.sh  logic.c  logic.h  main.c  main.h  menu.c  menu.h  minesweeper.cpp
sdlreversi/: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  gen_assets.sh  reversi.cpp
sdlreversi/ai/: Egaroucid.cpp  ai.hpp  bit.hpp  board.hpp  book.hpp  book_const.hpp  bookrw.hpp  common.hpp  embed_book.cpp  embed_eval.cpp  endsearch.hpp  evaluate.hpp  level.hpp  main.cpp  midsearch.hpp  move_ordering.hpp  stability.hpp
sdlreversi/imgui/: imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp
spidersol/: .gitignore  Makefile  Makefile.am  README.md  cntrl.c  cntrl.h  configure.ac  deal.c  deal.h  engine.c  game_state.c  game_state.h  infobox.c  infobox.h  leaderboard.h  settings.h  spidersol.c  spidersol.cpp  ui.c  ui.h  undo.h  vector.h  win.c
spidersol/asset/: assets.h  brush.h
