AC_PREREQ([2.71])
AC_INIT([spidersol], [1.0], [kspalaiologos@gmail.com])
AC_CONFIG_SRCDIR([spidersol.c])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([foreign])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

PKG_PROG_PKG_CONFIG

# Checks for libraries.
PKG_CHECK_MODULES([SDL], [sdl2])
PKG_CHECK_MODULES([SDL_ttf], [sdl2_ttf])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT